# android_vendor_qcom_opensource_agm

./: NOTICE
ipc/: Android.mk
ipc/DBus/agm_client/: Makefile.am
ipc/DBus/agm_server/: Makefile.am
ipc/HwBinders/: Android.mk
ipc/HwBinders/agm_ipc_client/: Android.mk
ipc/HwBinders/agm_ipc_client/inc/: AGMCallback.h
ipc/HwBinders/agm_ipc_client/src/: AGMCallback.cpp  agm_client_wrapper.cpp
ipc/HwBinders/agm_ipc_service/: Android.mk  vendor.qti.hardware.AGMIPC@1.0-service.rc
ipc/HwBinders/agm_ipc_service/inc/: agm_server_wrapper.h
ipc/HwBinders/agm_ipc_service/src/: agm_server_wrapper.cpp  service.cpp
ipc/HwBinders/interfaces/AGMIPC/: current.txt
ipc/HwBinders/interfaces/AGMIPC/1.0/: Android.bp  IAGM.hal  IAGMCallback.hal  types.hal
ipc/SwBinders/agm_client/: Android.mk
ipc/SwBinders/agm_client/src/: agm_client_wrapper.cpp
ipc/SwBinders/agm_server/: Android.mk  Makefile.am
ipc/SwBinders/agm_server/inc/: agm_server_wrapper.h  ipc_interface.h
ipc/SwBinders/agm_server/src/: agm_server_daemon.cpp  agm_server_wrapper.cpp  ipc_proxy_server.cpp
ipc/agm_client/: Android.mk  Makefile.am
ipc/agm_client/src/: agm_client_wrapper.cpp
ipc/agm_server/: Android.mk  Makefile.am  configure.ac
ipc/agm_server/inc/: agm_callback.h  agm_death_notifier.h  agm_server_wrapper.h  ipc_interface.h
ipc/agm_server/src/: agm_callback.cpp  agm_death_notifier.cpp  agm_server_daemon.cpp  agm_server_wrapper.cpp  ipc_proxy_server.cpp
plugins/: Android.mk
plugins/alsalib/src/: agm_ctl_plugin.c  agm_io_plugin.c
plugins/tinyalsa/: Android.mk  Makefile.am  agmplugin.pc.in  configure.ac
plugins/tinyalsa/src/: agm_compress_plugin.c  agm_dummy_impl.c  agm_mixer_plugin.c  agm_pcm_plugin.c
plugins/tinyalsa/test/: Android.mk  Makefile.am  agm_voiceui.c  agmcap.c  agmcompresscap.c  agmcompressplay.c  agmhostless.c  agmmixer.c  agmmixer.h  agmplay.c  backend_conf.xml  configure.ac
service/: Android.mk  Makefile.am  configure.ac
service/inc/: agm_api.h  agm_list.h  agm_priv.h  device.h  graph.h  graph_module.h  metadata.h  session_obj.h  utils.h
service/inc/private/agm/: device.h  graph.h  graph_module.h  session_obj.h
service/inc/public/agm/: agm_api.h
service/src/: agm.c  device.c  device_hw_ep.c  graph.c  graph_module.c  metadata.c  session_obj.c  utils.c
service/test/src/: agm_test.c
snd_parser/: Android.mk  Makefile.am  configure.ac
snd_parser/inc/: snd-card-def.h
snd_parser/samples/: card-defs.xml
snd_parser/src/: snd-card-parser.c
