# Requires autoconf tool later than 2.61
AC_PREREQ(2.69)
# Initialize the agm plugin package version 1.0.0
AC_INIT([agmplugin],1.0.0)
# Does not strictly follow GNU Coding standards
AM_INIT_AUTOMAKE([foreign subdir-objects])

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_PROG_AWK
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
PKG_PROG_PKG_CONFIG
		
AC_CONFIG_FILES([ Makefile agmplugin.pc ])
AC_OUTPUT
